test: ProofHistoryFixtures 내 인증 기록 파일 순서 값 변경과 인증 기록 파일 엔티티 추가 정의